--- a/index.html
+++ b/index.html
@@ -1,10 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<title> Blocks </title>
+    <title>Завдання 1</title>
+    
 </head>
 <body>
-
+<div class="blocks">
+    <h2>Sample 1</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eu enim nec odio blandit hendrerit.</p>
+</div>
+<div class="blocks">
+    <h2>Sample 2</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eu enim nec odio blandit hendrerit.</p>
+</div>
+<div class="blocks">
+    <h2>Sample 3</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eu enim nec odio blandit hendrerit.</p>
+</div>
+<style>
+        body {
+            background-color: #ffffff;
+        }
+        .blocks {
+            display: inline-block;
+            width: 30%;
+            padding: 20px;
+            border: 1px solid #999;
+            box-shadow: 2px 2px 4px #888;
+            background-color: #ffd595;
+            margin: 20px;
+            position: relative;
+        }
+        .blocks::before {
+            content: "";
+            display: block;
+            width: 50px;
+            height: 20px;
+            background-color: rgb(85, 78, 78);
+            border-radius: 10px 10px 0 0;
+            position: absolute;
+            top: -20px;
+            left: -100px;
+            margin-left: 70%;
+        }
+        h2 {
+            text-shadow: 1px -1px #c2924d, 1px 1px #eea445;
+        }
+    </style>
 </body>
-
 </html>
