--- a/index.html
+++ b/index.html
@@ -1,51 +1,33 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="X-UA-Compatible">
 <head>
-    <title>Завдання 1</title>
-    
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>math</title>
 </head>
 <body>
-<div class="blocks">
-    <h2>Sample 1</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eu enim nec odio blandit hendrerit.</p>
-</div>
-<div class="blocks">
-    <h2>Sample 2</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eu enim nec odio blandit hendrerit.</p>
-</div>
-<div class="blocks">
-    <h2>Sample 3</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eu enim nec odio blandit hendrerit.</p>
-</div>
-<style>
-        body {
-            background-color: #ffffff;
+<input type="button" value="Розгалужений обчислювальний процес" onclick="x()">
+<script>
+    var xmin = prompt('enter xmin','');
+    var xmax = prompt('enter xmax','');
+    var W;
+    function x(){
+            for (var i=xmax;i>=xmin;i=i-2){
+                if(i<2){
+                    W = Math.pow(Math.cos(i), 2);
+                }
+                if(i===2){
+                    W = Math.tan(i)+Math.pow(i, 3.7);
+                }
+                if(i>2){
+                    W = Math.abs(1-Math.pow(i,2));
+                }
+                alert("Рузультат розрахунків при аргументі "+i+" = "+W);
+            }
         }
-        .blocks {
-            display: inline-block;
-            width: 30%;
-            padding: 20px;
-            border: 1px solid #999;
-            box-shadow: 2px 2px 4px #888;
-            background-color: #ffd595;
-            margin: 20px;
-            position: relative;
-        }
-        .blocks::before {
-            content: "";
-            display: block;
-            width: 50px;
-            height: 20px;
-            background-color: rgb(85, 78, 78);
-            border-radius: 10px 10px 0 0;
-            position: absolute;
-            top: -20px;
-            left: -100px;
-            margin-left: 70%;
-        }
-        h2 {
-            text-shadow: 1px -1px #c2924d, 1px 1px #eea445;
-        }
-    </style>
+</script>
+
 </body>
 </html>
