--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="X-UA-Compatible">
 <head>
   <title>Розгалужений обчислювальний процес</title>
+  <meta charset="UTF-8">
   <script>
     function calculateValues() {
       var xStart = parseInt(document.getElementById("xStart").value);
